Refactor, fixes the nad config generation
Signed-off-by: BOUTIER Charly <charly.boutier@rte-france.com>